--- a/_data/2020/bay_area/schedule.yml
+++ b/_data/2020/bay_area/schedule.yml
@@ -3,53 +3,53 @@
 - date: 2020-06-15
   name: "Introduction and Ethics"
   events:
-    - name: "1:00 - 1:20 Welcome to BAY-SICSS and Logistics (*Zoom*)"
-    - name: "1:20 - 1:45 Introductory remarks from David Harding, UC Berkeley D-Lab (*Zoom*)"
+    - name: "1:00 - 1:20 Welcome to BAY-SICSS and Logistics"
+    - name: "1:20 - 1:45 Introductory remarks from David Harding, UC Berkeley D-Lab"
     - name: "1:45 - 2:45 Small Group Discussion [Lesson Plan](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day1-intro-ethics/small_group_discussions.md)"
     - name: "2:45 - 3:45 Break"
-    - name: "3:45 - 4:00 Introduction to the group exercise (*Zoom*)"
-    - name: "4:00 - 4:45 Small group discussion of [Case study](https://bdes.datasociety.net/wp-content/uploads/2016/10/Patreon-Case-Study.pdf) (*Zoom*)"
-    - name: "4:45 - 5:00 Whole group debrief about case study (*Zoom*)"
-    - name: "5:00 - 6:00 Debrief, logistics, and Virtual Happy Hour (*Zoom*)"
+    - name: "3:45 - 4:00 Introduction to the group exercise"
+    - name: "4:00 - 4:45 Small group discussion of [Case study](https://bdes.datasociety.net/wp-content/uploads/2016/10/Patreon-Case-Study.pdf)"
+    - name: "4:45 - 5:00 Whole group debrief about case study"
+    - name: "5:00 - 6:00 Debrief, logistics, and Virtual Happy Hour"
 
 - date: 2020-06-16
   name: "Collecting Digital Trace Data"
   events:
-    - name: "1:00 - 1:30 Logistics and introduction to group exercise (*Zoom*)"
-    - name: "1:30 - 3:00 Group excercise (*Zoom*)"
-    - name: "3:00 - 3:15 Whole group debrief about group excercise (*Zoom*)"
+    - name: "1:00 - 1:30 Logistics and introduction to group exercise"
+    - name: "1:30 - 3:00 [Group excercise](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day2-digital-trace-data/Group%20Exercise%20Day%202.Rmd)"
+    - name: "3:00 - 3:15 Whole group debrief about group excercise"
     - name: "3:15 - 4:00 Break"
     - name: "4:00 - 5:00 Johannes Eichstadt, Stanford University"
-    - name: "5:00 - 5:15 Debrief and logistics (*Zoom)"
+    - name: "5:00 - 5:15 Debrief and logistics"
 
 - date: 2020-06-17
   name: "Automated Text Analysis"
   events:
-    - name: "1:00 - 1:30 Logistics and Introduction to the group exercise (*Zoom*)"
-    - name: "1:30 - 3:15 Group excercise(*Zoom*)"
-    - name: "3:15 - 3:30 Whole group debrief about group excercise (*Zoom*)"
+    - name: "1:00 - 1:30 Logistics and Introduction to the group exercise"
+    - name: "1:30 - 3:15 Group excercise"
+    - name: "3:15 - 3:30 Whole group debrief about group excercise"
     - name: "3:30 - 4:30 Break"
     - name: "4:30 - 5:30 Sharad Goel, Stanford University"
-    - name: "5:30 - 5:45 Debrief and logistics (*Zoom)"
+    - name: "5:30 - 5:45 Debrief and logistics"
       
 - date: 2020-06-18
   name: "Surveys in the Digital Age"
   events:
-    - name: "1:00 - 1:30 Logistics and Introduction to the group exercise (*Zoom*)"
-    - name: "1:30 - 2:30 Group excercise, Part 1 (*Zoom*)"
+    - name: "1:00 - 1:30 Logistics and Introduction to the group exercise"
+    - name: "1:30 - 2:30 Group excercise, Part 1"
     - name: "2:30 - 3:00 Break"
     - name: "3:00 - 4:45 Meet the Partners: HopeLab, No More Silence"
-    - name: "4:45 - 5:30 Group excercise, Part 2 (*Zoom*)"
-    - name: "5:30 - 6:00 Debrief and logistics (*Zoom*)"
+    - name: "4:45 - 5:30 Group excercise, Part 2"
+    - name: "5:30 - 6:00 Debrief and logistics"
 
 - date: 2020-06-19
   name: "Mass collaboratation and machine learning"
   events:
-    - name: "1:00 - 1:30 Logistics and Introduction to the Fraglie Families Challenge (*Zoom*)"
-    - name: "1:30 - 3:30 Participate in the Fraglie Families Challenge (*Zoom*)"
-    - name: "3:30 - 4:00 Break (*Zoom*)"
+    - name: "1:00 - 1:30 Logistics and Introduction to the Fraglie Families Challenge"
+    - name: "1:30 - 3:30 Participate in the Fraglie Families Challenge"
+    - name: "3:30 - 4:00 Break"
     - name: "4:00 - 5:30 Meet the Partners: Pangea Lab/UCSF, Code for America, DonorsChoose"
-    - name: "5:30 - 6:00 Debrief and logistics (*Zoom*)"
+    - name: "5:30 - 6:00 Debrief and logistics"
 
 - date: 2020-06-20
   name: Day off
@@ -61,31 +61,31 @@
   name: Work on partner projects and participate in SICSS Festival (optional)
   events:
     - name: "4:00 - 5:00 Luke Terra, Stanford University"
-    - name: "5:00 - 5:30 Debrief and logistics (*Zoom*)"
+    - name: "5:00 - 5:30 Debrief and logistics"
 
 - date: 2020-06-23
   name: Work on partner projects and participate in SICSS Festival (optional)
   events:
     - name: "4:00 - 5:00 Dennis Feehan, UC Berkeley (Demography)"
-    - name: "5:00 - 5:30 Debrief and logistics (*Zoom*)"
+    - name: "5:00 - 5:30 Debrief and logistics"
 
 - date: 2020-06-24
   name: Work on partner projects and participate in SICSS Festival (optional)
   events:
     - name: "4:00 - 5:00 Speaker TBD"
-    - name: "5:00 - 5:30 Debrief and logistics (*Zoom*)"
+    - name: "5:00 - 5:30 Debrief and logistics"
 
 - date: 2020-06-25
   name: Work on partner projects and participate in SICSS Festival (optional)
   events:
     - name: "4:00 - 5:00 Sameer Srivastava, UC Berkeley (Haas School of Business)"
-    - name: "5:00 - 5:30 Debrief and logistics (*Zoom*)"
+    - name: "5:00 - 5:30 Debrief and logistics"
 
 - date: 2020-06-26
   name: Work on partner projects and participate in SICSS Festival (optional)
   events:
     - name: "4:00 - 5:00 Susan Athey, Stanford Graduate School of Business"
-    - name: "5:00 - 5:30 Project Check-Ins (*Zoom*)"
+    - name: "5:00 - 5:30 Project Check-Ins"
 
 - date: 2020-06-27
   name: Day off
@@ -97,27 +97,27 @@
   name: Work on partner projects
   events:
     - name: "4:00 - 5:00 Rob Reich, Stanford University (Political Science)"
-    - name: "5:00 - 5:30 Debrief and logistics (*Zoom*)"
+    - name: "5:00 - 5:30 Debrief and logistics"
 
 - date: 2020-06-30
   name: Work on partner projects
   events:
     - name: "4:00 - 5:00 Eli Ben-Michael, UC Berkeley (Statistics)"
-    - name: "5:00 - 5:30 Debrief and logistics (*Zoom*)"
+    - name: "5:00 - 5:30 Debrief and logistics"
 
 - date: 2020-07-01
   name: Work on partner projects
   events:
     - name: "4:00 - 5:00 Speaker TBD"
-    - name: "5:00 - 5:30 Debrief and logistics (*Zoom*)"
+    - name: "5:00 - 5:30 Debrief and logistics"
 
 - date: 2020-07-02
   name: Work on project presentations
   events:
-    - name: "5:00 - 5:30 Debrief and logistics (*Zoom*)"    
+    - name: "5:00 - 5:30 Debrief and logistics"    
 
 - date: 2020-07-03
   name: PPP (Partner Project Presentations)
   events:
     - name: "4:00 - 5:30 Final Presentations"
-    - name: "5:30 - 6:00 Closing Remarks (*Zoom*)"    
+    - name: "5:30 - 6:00 Closing Remarks"    
