--- a/_data/2020/montreal/schedule.yml
+++ b/_data/2020/montreal/schedule.yml
@@ -45,8 +45,8 @@
     - name: "11:30 - 12:00 Break"
     - name: "12:00 - 1:00 Small group lunches (optional) in [Zoom break-out rooms](https://uqam.zoom.us/j/7123857324)"
     - name: "1:00 - 1:15 Break"
-    - name: "1:15 - 1:30 Introduction to the [group exercise](https://github.com/compsocialscience/summer-institute/blob/master/2020/montreal/materials/day2-digital-trace-data/exercice_2.md) in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
-    - name: "1:30 - 3:00 [Group exercise](https://github.com/compsocialscience/summer-institute/blob/master/2020/montreal/materials/day2-digital-trace-data/exercice_2.md) (collecting Digital Trace Data) in [Zoom break-out rooms](https://uqam.zoom.us/j/7123857324)"
+    - name: "1:15 - 1:30 Introduction to the [Group Exercise (English version)](https://github.com/compsocialscience/summer-institute/blob/master/2020/montreal/materials/day2-digital-trace-data/Group_Exercise_Day2.md) or [French version](https://github.com/compsocialscience/summer-institute/blob/master/2020/montreal/materials/day2-digital-trace-data/exercice_2.md) in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
+    - name: "1:30 - 3:00 [Group Exercise (English version)](https://github.com/compsocialscience/summer-institute/blob/master/2020/montreal/materials/day2-digital-trace-data/Group_Exercise_Day2.md) or [French version](https://github.com/compsocialscience/summer-institute/blob/master/2020/montreal/materials/day2-digital-trace-data/exercice_2.md) (collecting Digital Trace Data) in [Zoom break-out rooms](https://uqam.zoom.us/j/7123857324)"
     - name: "3:00 - 3:30 Whole group debrief about [group exercise](https://github.com/compsocialscience/summer-institute/blob/master/2020/montreal/materials/day2-digital-trace-data/exercice_2.md) (Strengths & Benefits plus Hybrid Designs) in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
     - name: "3:30 - 3:45 Debrief and logistics in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
     - name: "4:00 - 5:30 Guest speaker : [Stephane Helleringer](https://www.jhsph.edu/faculty/directory/profile/3136/st-phane-helleringer) in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
