--- a/_data/2020/duke/schedule.yml
+++ b/_data/2020/duke/schedule.yml
@@ -28,6 +28,7 @@
     - name: "1:15 - 2:30 Collecting Digital Trace Data(*Zoom*)"
     - name: "2:30 - 3:30 Discussing Strengths & Benefits plus Hybrid Designs (*Zoom*)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
+    - name: "3:45 - 4:00 Break"
     - name: "4:00 - 5:30 Dan Ariely: How to change behavior for good using principles from social science"
 
 - date: 2020-06-17
