--- a/_data/2020/bay_area/schedule.yml
+++ b/_data/2020/bay_area/schedule.yml
@@ -38,7 +38,7 @@
     - name: "1:00 - 1:30 Logistics and Introduction to the group exercise"
     - name: "1:30 - 2:30 Group excercise, Part 1"
     - name: "2:30 - 3:00 Break"
-    - name: "3:00 - 4:45 Meet the Partners: HopeLab, No More Silence"
+    - name: "3:00 - 4:45 Meet the Partners: HopeLab, Panacea Lab/UCSF, No More Silence"
     - name: "4:45 - 5:30 Group excercise, Part 2"
     - name: "5:30 - 6:00 Debrief and logistics"
 
@@ -48,7 +48,7 @@
     - name: "1:00 - 1:30 Logistics and Introduction to the Fraglie Families Challenge"
     - name: "1:30 - 3:30 Participate in the Fraglie Families Challenge [Lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day5-mass-collaboration/activity/lesson_plan_masscollaboration_participant.md), [Lesson plan (instructors)](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day5-mass-collaboration/activity/lesson_plan_masscollaboration_instructor.md) (*Zoom*)"
     - name: "3:30 - 4:00 Break"
-    - name: "4:00 - 5:30 Meet the Partners: Panacea Lab/UCSF, Code for America, DonorsChoose"
+    - name: "4:00 - 5:30 Meet the Partners: DonorsChoose, Code for America"
     - name: "5:30 - 6:00 Debrief and logistics"
 
 - date: 2020-06-20
