--- a/_data/2020/bay_area/schedule.yml
+++ b/_data/2020/bay_area/schedule.yml
@@ -38,7 +38,7 @@
     - name: "1:00 - 1:30 Logistics and Introduction to the group exercise"
     - name: "1:30 - 2:30 Group excercise, Part 1"
     - name: "2:30 - 3:00 Break"
-    - name: "3:00 - 4:45 Meet the Partners: HopeLab, Panacea Lab/UCSF, No More Silence"
+    - name: "3:00 - 4:45 Meet the Partners: HopeLab, No More Silence, Panacea Lab/UCSF"
     - name: "4:45 - 5:30 Group excercise, Part 2"
     - name: "5:30 - 6:00 Debrief and logistics"
 
