--- a/_data/2020/stellenbosch/schedule.yml
+++ b/_data/2020/stellenbosch/schedule.yml
@@ -70,17 +70,21 @@
 
 - date: 2020-06-18
   events:
-    - name: "Git for Data Analysis"
-    - name: "Social Network Analysis"
-    - name: "Modelling and Machine Learning"
+    - name: "What, Why, and Which Experiments? [Video](https://youtube.com//watch?v=hKiKiWbeD6I). [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day6-experiments/01-what-why-which-experiments.pdf)."
+    - name: "Moving Beyond Simple Experiments. [Video](https://www.youtube.com/watch?v=cYyu5Ex0twE). [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day6-experiments/02-moving-beyond-simple-experiments.pdf)"
+    - name: "Four Strategies for Making Experiments Happen. [Video](https://youtube.com//watch?v=KDLFigGDORY). [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day6-experiments/03-making-it-happen.pdf)."
+    - name: "Zero Variable Cost Data and Musiclab. [Video](https://youtube.com//watch?v=rAGMpZuU3RU). [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day6-experiments/04-zero-variable-cost.pdf)."
+    - name: "3Rs. [Video](https://youtube.com//watch?v=aQPce-WgJBY). [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day6-experiments/05-three-rs.pdf)."
+    - name: "Social Network Analysis. [Video](https://youtu.be/k6qoLbAbG78). [Intoduction to the Exercise](https://youtu.be/B3g_-irQ47k)."
+    - name: "Introduction to Git for Data Analysis with R. [Video](). [Rmd]()."
 
 - date: 2020-06-19
   events:
-    - name: "Survey Research in the Digital Age"
-    - name: "Sampling"
-    - name: "Computer Administered Interviews"
-    - name: "Combining Surveys and Big Data"
-    - name: "Experiments in the Digital Age"
+    - name: "Survey Research in the Digital Age. [Video](https://www.youtube.com/watch?v=j8fJGV17Hcg). [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day4-surveys/01-survey-research-digital-age.pdf)."
+    - name: "Probability and Non-Probability Sampling. [Video](https://www.youtube.com/watch?v=SLAi9v5CCnM). [Slides](https://github.com/compsocialscience/summer-institute/tree/master/2020/materials/day4-surveys/02-nonprobability-sampling.pdf)."
+    - name: "Computer-Administered Interviews. [Video](https://www.youtube.com/watch?v=HT1bQ3Bh79w). [Slides](https://github.com/compsocialscience/summer-institute/tree/master/2020/materials/day4-surveys/03-computer-administered-interviews.pdf)."
+    - name: "Combining Surveys and Big Data. [Video](https://www.youtube.com/watch?v=_vecQs7aB6o). [Slides](https://github.com/compsocialscience/summer-institute/tree/master/2020/materials/day4-surveys/04-combining-surveys-and-big-data.pdf)."
+    - name: "Additions and Extension. [Video](https://www.youtube.com/watch?v=97gahprIIOI). [Slides](https://github.com/compsocialscience/summer-institute/tree/master/2020/materials/day4-surveys/05-survey-additions-extensions.pdf)."
 
 - date: "Week Three: SICSS Festival and Guest Lectures"
   events:
