--- a/_data/2020/montreal/schedule.yml
+++ b/_data/2020/montreal/schedule.yml
@@ -79,7 +79,7 @@
     - name: "1:15 - 3:00 Afternoon [group exercise](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day4-surveys/activity/lesson_plan_survey_participant.md) in [Zoom break-out rooms](https://uqam.zoom.us/j/7123857324)"
     - name: "3:00 - 3:30 Whole group debrief about [group exercise](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day4-surveys/activity/lesson_plan_survey_participant.md)  in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
     - name: "3:30 - 3:45 Debrief and logistics in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
-    - name: "4:00 - 5:30 Guest speaker : [Will Hamilton](https://williamleif.github.io/) in [Zoom full group](https://uqam.zoom.us/j/7123857324)"
+    - name: "4:00 - 5:30 Guest speaker : [Will Hamilton](https://williamleif.github.io/) : Graph embeddings for large-scale social applications (in [Zoom full group](https://uqam.zoom.us/j/7123857324))"
 
 - date: 2020-06-19
   name: Machine Learning and Social Network Analysis
