adding break to day 5

--- a/_data/2020/duke/schedule.yml
+++ b/_data/2020/duke/schedule.yml
@@ -66,7 +66,8 @@
     - name: "11:30 - 12:00 Break"
     - name: "12:00 - 1:00 Small group lunches (optional) (*Zoom*)"
     - name: "1:00 - 1:15 Break"
-    - name: "1:15 - 3:15 Continue participating in the Fragile Families Challenge (*Zoom*)"
+    - name: "1:15 - 3:00 Continue participating in the Fragile Families Challenge (*Zoom*)"
+    - name: "3:00 - 3:15 Break"
     - name: "3:15 - 3:30 Whole group debrief about group exercise (*Zoom*)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
 
