--- a/_data/2020/rutgers/participants.yml
+++ b/_data/2020/rutgers/participants.yml
@@ -19,8 +19,8 @@
   image: /assets/images/CarolynBarnett.jpg
 
 - name: Ihsan Beezer
-  bio: ""
-  image: /assets/images/
+  bio: "Ihsan Beezer is a PhD student in Organization Management at Rutgers Business School. He is also affiliated with Rutgers Business School’s Center for Urban Entrepreneurship and Economic Development (CUEED). His research focuses on urban and minority entrepreneurship. He holds a B.A. in Economics from the University of Maryland, College Park and M.S. in Management from the Kenan-Flagler Business School of the University of North Carolina at Chapel Hill. "
+  image: /assets/images/IhsanBeezer.jpg
   
 - name: Ashley Bieniek-Tobasco
   bio: "Ashley Bieniek-Tobasco is a Research Assistant Professor at University of Illinois at Chicago School of Public Health in the Division of Environmental and Occupational Health Sciences. Her research focuses on the theory, practice and evaluation of climate change and risk communication. In particular, she is interested in the interaction between narrative transportation, efficacy beliefs, emotion, and political affiliation in responses to climate change communication. She is also interested in characterizing the public health impacts of exposure to COVID-19 misinformation. Prior to joining UIC, she worked in climate science policy at the US Global Change Research Program. Ashley received her DrPH from George Washington University and is a two-time alumna of the University of Michigan."
@@ -148,7 +148,7 @@
 
 - name: Maria Wilson
   bio: "Maria is a PhD student at Rutgers University in Political Science, with a focus on gender and politics. Her work uses both qualitative and quantitative analysis to examine the relationship between campaign finance law and women's political participation in state legislatures. She received her undergraduate degree in Political Science from the University of New Mexico."
-  image: /assets/images/
+  image: /assets/images/MariaWilson.jpg
   
 - name: Laura Wolton
   bio: "Laura Wolton is a PhD candidate at the University of Colorado Denver School of Public Affairs. She received a graduate certificate in Science and Technology Policy and MS in Astrophysical, Planetary, and Atmospheric Sciences from the University of Colorado Boulder after receiving a BS in Marine Science from Texas A&M at Galveston. Her research interests include public science agencies, citizen and bureaucratic dissent, campaign narratives, and media coverage of technological disasters. Her dissertation uses semi-automated methods to investigate policy narrative elements, including the social construction of characters, issue frames, and blame."
