--- a/_data/2020/rutgers/schedule.yml
+++ b/_data/2020/rutgers/schedule.yml
@@ -67,7 +67,7 @@
 - date: 2020-06-22
   name: "<b>Experiments in the Digital Age</b>"
   events:
-    - name: "<b>Tutorial on ggplot with Carrie</b>"
+    - name: "<b>(Optional) Tutorial on ggplot with Carrie</b>"
       time: "9:15 - 10:00"
     - name: "<b>Activity on Digital Experiments</b>"
       time: "10:00 - 11:45"
@@ -83,7 +83,7 @@
   events:
     - name: "<b>Work on Group Projects</b>"
       time: "open morning work time"
-    - name: "<b>Tutorial on MTurk with Analia</b>"
+    - name: "<b>(Optional) Tutorial on MTurk with Analia</b>"
       time: "9:15 - 10:00"
     - name: "<b>Full Session: Checking in on Group Projects</b>"
       time: "11:30"
@@ -100,7 +100,7 @@
   events:
     - name: "<b>Work on Group Projects</b>"
       time: "open morning and afternoon work time"
-    - name: "<b>Tutorial on Loops (30-40 minutes)</b>"
+    - name: "<b>(Optional) Tutorial on Loops (30-40 minutes)</b>"
       time: "9:30"
     - name: "<b>Full Session: Checking in on Group Projects</b>"
       time: "14:45"
