Fix collaboratation in schedule

--- a/_data/2020/duke/schedule.yml
+++ b/_data/2020/duke/schedule.yml
@@ -58,7 +58,7 @@
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
 
 - date: 2020-06-19
-  name: Mass collaboratation and machine learning
+  name: Mass collaboration and machine learning
   events:
     - name: "10:00 - 10:15 Logistics (*Zoom*)"
     - name: "10:15 - 10:30 Introduction to the group exercise [Video](https://www.youtube.com/watch?v=ZI95vV7Co38) [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day5-mass-collaboration/06-ffchallenge_participate_activity.pdf) (*Zoom*)"
