--- a/_data/2020/duke/schedule.yml
+++ b/_data/2020/duke/schedule.yml
@@ -99,8 +99,8 @@
   name: Work on group projects (optional) and/or participate in SICSS Festival
   events:
     - name: "11:00 - 12:00 Optional: Creating open source software as part of an academic career. Details on the [Festival page](https://compsocialscience.github.io/summer-institute/2020/festival)"
-    - name: "3:30 - 4:00 Small group meetings with Elizabeth Bruch"
-    - name: "4:00 - 6:00 Elizabeth Bruch: Title TBA"
+    - name: "1:00 - 2:00 Small group meetings with Elizabeth Bruch"
+    - name: "4:00 - 5:00 Elizabeth Bruch"
 
 - date: 2020-06-26
   name: Present group projects and/or participate in SICSS Festival
