--- a/_data/2020/rutgers/schedule.yml
+++ b/_data/2020/rutgers/schedule.yml
@@ -116,7 +116,7 @@
       time: "11:15"
     - name: "<b>Lunch Discussion with Guest Speaker</b> (Arvind Narayanan)"
       time: "12:00 - 13:30"
-    - name: "<b>(Encouraged) What Can the SICSS Community Do to Recognize and Eradicate Anti-Black Racism in Computational Social Science?. [Register here](https://docs.google.com/forms/d/e/1FAIpQLSf_NJCA6jidJVSiZoqkxqqgYr918HsgH4XO65mUgHG3W3yUDA/viewform)
+    - name: "<b>(Encouraged) What Can the SICSS Community Do to Recognize and Eradicate Anti-Black Racism in Computational Social Science? [Register here](https://docs.google.com/forms/d/e/1FAIpQLSf_NJCA6jidJVSiZoqkxqqgYr918HsgH4XO65mUgHG3W3yUDA/viewform)
 </b>"
       time: "14:00 - 15:00"
     - name: "<b>Work on Group Projects</b>"
