--- a/_data/2020/duke/schedule.yml
+++ b/_data/2020/duke/schedule.yml
@@ -83,8 +83,9 @@
     - name: "10:00 - 10:30 Research Speed Dating Logistics (*Zoom*), [Slides for Instructors](https://compsocialscience.github.io/summer-institute/2020/materials/research-speed-dating/Speed_Dating.html#/)"
     - name: "10:15 - 11:30 Research Speed Dating Maximally Similar Groups (*Zoom*)"
     - name: "12:00 - 1:00 Panel discussion on teaching computational social science. Details on the [Festival page](https://compsocialscience.github.io/summer-institute/2020/festival)"
-    - name: "1:15 - 3:30 Research Speed Dating Maximally Dissimilar Groups (*Zoom*)"
-
+    - name: "1:15 - 3:15 Research Speed Dating Maximally Dissimilar Groups (*Zoom*)"
+    - name: "3:15 - 3:30 Group Debrief (join research teams) (*Zoom*)"
+    
 - date: 2020-06-23
   name: Work on group projects (optional) and/or participate in SICSS Festival
   events:
