--- a/_data/2020/istanbul/schedule.yml
+++ b/_data/2020/istanbul/schedule.yml
@@ -157,7 +157,7 @@
 - date: 2020-06-26
   name: Present Group Projects
   events:
-    - name: "Presentations ([Registration](https://docs.google.com/forms/d/e/1FAIpQLSeyNvp-0neCFx2UIbkdVmgYuYQMcAokp8cWrnwkfWbQKGNm2Q/viewform?usp=pp_url))"
+    - name: "Presentations ([Registration Form](https://tapanyemre.typeform.com/to/LeRzJIvC)"
       time: "14:00 - 16:00"
     - name: "Conclusion"
       time: "16:00 - 16:30"
