--- a/_data/2020/maastricht/schedule.yml
+++ b/_data/2020/maastricht/schedule.yml
@@ -91,7 +91,7 @@
 - date: 2020-06-24
   name: "<b>Work on group projects</b>"
   events:
-    - name: "16.00 - 17.30 Possible panel discussion (*Zoom*)"
+    - name: "16.00 - 17.15 Panel debate on Computational social science to address the (post) COVID-19 reality (*Zoom*). More details [here](https://compsocialscience.github.io/summer-institute/2020/festival)"
     - name: "18.00 - 19.00 Office hours (*Zoom*)"
 
 - date: 2020-06-25
