--- a/_data/2020/bay_area/schedule.yml
+++ b/_data/2020/bay_area/schedule.yml
@@ -72,7 +72,7 @@
 - date: 2020-06-24
   name: Work on partner projects and participate in SICSS Festival (optional)
   events:
-    - name: "4:00 - 5:00 Speaker TBD"
+    - name: "4:00 - 5:00 Johan Ugander, Stanford University (Management Science & Engineering)"
     - name: "5:00 - 5:30 Debrief and logistics"
 
 - date: 2020-06-25
