--- a/_data/2020/maastricht/schedule.yml
+++ b/_data/2020/maastricht/schedule.yml
@@ -11,7 +11,7 @@
 - date: 2020-06-15
   name: "<b>Introduction and Ethics</b>"
   events:
-    - name: "12.30 - 13.00 Introduction and logistics (*Zoom*)"
+    - name: "12.30 - 13.00 Introduction and logistics: [Slides](https://drive.google.com/file/d/14YdMYr3_5HHOAcZS5eY_nyQkSQhnwi08/view?usp=sharing) (*Zoom*)"
     - name: "13.00 - 14.00 Small group lunches (*Zoom*)"
     - name: "14.00 - 14.30 Break"
     - name: "14.30 - 15.30 Guest speaker [Argyri Panezi](https://compsocialscience.github.io/summer-institute/2020/maastricht/people) (*Zoom*)"
@@ -57,7 +57,7 @@
 - date: 2020-06-19
   name: "<b>Network Analysis in Law</b>"
   events:
-    - name: "12.00 - 13.00 Lecture on network analysis by [Gijs van Dijck](https://compsocialscience.github.io/summer-institute/2020/maastricht/people) (*Zoom*)" 
+    - name: "12.00 - 13.00 Lecture on network analysis by [Gijs van Dijck](https://compsocialscience.github.io/summer-institute/2020/maastricht/people): [Slides](https://drive.google.com/file/d/1iZOVj0Y7aj762cEzFLp2hYajJiNCiqT2/view?usp=sharing) (*Zoom*)" 
     - name: "13.00 - 14.00 Small group lunches (*Zoom*)" 
     - name: "14.00 - 14.30 Break"
     - name: "14.30 - 16.00 Workshop: Introduction Gephi by [Constanta Rosca](https://compsocialscience.github.io/summer-institute/2020/maastricht/people): [Lesson Plan](https://drive.google.com/file/d/1yjDA-Fyw1WT2-p65kvIfOzniX5ifaITI/view) (*Zoom*)"
@@ -78,7 +78,7 @@
     - name: "13.00 - 13.15 Break"
     - name: "13.15 - 14.00 Small group lunches (*Zoom*)" 
     - name: "14.00 - 14.30 Break"
-    - name: "14.30 - 16.00 Workshop: Introduction oTree by [Philipp Chapkovski](https://compsocialscience.github.io/summer-institute/2020/maastricht/people) (*Zoom*)"
+    - name: "14.30 - 16.00 Workshop: Introduction oTree by [Philipp Chapkovski](https://compsocialscience.github.io/summer-institute/2020/maastricht/people): [Slides](https://drive.google.com/file/d/1Cm_qL7WNPoKJK7_dzKKkv3Pq1ph7O54j/view?usp=sharing) (*Zoom*)"
     - name: "16.00 - 16.30 Break"
     - name: "16.30 - 17.30 Finalizing group formation for Week 2 projects (*Zoom*)"
     
