--- a/_data/2020/rutgers/schedule.yml
+++ b/_data/2020/rutgers/schedule.yml
@@ -85,8 +85,8 @@
       time: "open morning work time"
     - name: "<b>(Optional) Tutorial on MTurk with Analia</b>"
       time: "9:15 - 10:00"
-    - name: "<b>Full Session: Checking in on Group Projects</b>"
-      time: "11:30"
+    - name: "<b>Slack a project plan</b>"
+      time: "By 12:00pm"
     - name: "<b>Why's the Power Out? Organizational Responsiveness to Everyday Requests, Questions, and Complaints</b> (Simone Zhang)"
       time: "12:00 - 13:30"
     - name: "<b>Work on Group Projects</b>"
@@ -104,8 +104,8 @@
       time: "9:30"
     - name: "<b>(Optional) Tutorial- Intro to Screen Scraping (targeted toward beginners)</b>"
       time: "12:30"
-    - name: "<b>Full Session: Checking in on Group Projects</b>"
-      time: "14:45"
+    - name: "<b>Slack an update on your group project (e.g., 1 paragraph)</b>"
+      time: "By 3:30"
     - name: "<b>How to Survey Political Elites</b> (Adam Thal)"
       time: "15:30 - 16:45"
 
@@ -114,9 +114,9 @@
   events:
     - name: "<b>Work on Group Projects</b>"
       time: "open morning work time"
-    - name: "<b>Full Session: Checking in on Group Projects</b>"
-      time: "11:15"
-    - name: "<b>Lunch Discussion with Guest Speaker</b> (Arvind Narayanan)"
+    - name: "<b>Slack an update on your group project (e.g., 1 paragraph)</b>"
+      time: "By 12:00"
+    - name: "<b>(Optional) Lunch Discussion with Guest Speaker</b> (Arvind Narayanan)"
       time: "12:00 - 13:30"
     - name: "<b>(Encouraged) What Can the SICSS Community Do to Recognize and Eradicate Anti-Black Racism in Computational Social Science? [Register here](https://docs.google.com/forms/d/e/1FAIpQLSf_NJCA6jidJVSiZoqkxqqgYr918HsgH4XO65mUgHG3W3yUDA/viewform)
 </b>"
