Add Los Angeles participant names

--- a/_data/2020/los_angeles/participants.yml
+++ b/_data/2020/los_angeles/participants.yml
@@ -1,2 +1,48 @@
 - name: Margarita Boyarskaya
   bio: "Margarita Boyarskaya is a PhD student at NYU Stern Technology, Operations, and Statistics group working on causal models for algorithmic fairness. She holds a B.Sc. and a M.Sc. in theoretical mathematics from Moscow State University. Previously, Margarita was an intern with the FATE group at Microsoft Research."
+
+- name: Stefanie Neumeier
+
+- name: Oscar Contreras
+
+- name: Hannah Hertenstein
+
+- name: Lilly Nhan
+
+- name: Delaney Knorr
+
+- name: Hye Min Kim
+
+- name: Alexandra (Allie) Wollum
+
+- name: Nripsuta Saxena
+
+- name: Jingyi Fang
+
+- name: Huyen Le
+
+- name: Kimberly Clair
+
+- name: Nicholas Havey
+
+- name: Hanzhang Liu
+
+- name: Jieun  Park
+
+- name: Cybele Kappos
+
+- name: Huchen Liu
+
+- name: Valerie Wirtschafter
+
+- name: Benjamin Kaveladze
+
+- name: Michelle Luna
+
+- name: Gilad Wenig
+
+- name: Heather Harper
+
+- name: Tania Cabello-Hutt
+
+- name: Fariba Siddiq
