Fix incorrect Tuesday afternoon Festival event
in Duke schedule.

--- a/_data/2020/duke/schedule.yml
+++ b/_data/2020/duke/schedule.yml
@@ -90,7 +90,7 @@
   name: Work on group projects (optional) and/or participate in SICSS Festival
   events:
     - name: "[Festival](https://compsocialscience.github.io/summer-institute/2020/festival): 1-2 Measuring cultural change in digital trace data using diversification rates"
-    - name: "[Festival](https://compsocialscience.github.io/summer-institute/2020/festival): 3:30 - 4:30 Computational social science to address the (post) COVID-19 reality"
+    - name: "[Festival](https://compsocialscience.github.io/summer-institute/2020/festival): 3:30 - 4:30 Discussion on diversity in computational social science"
 
 - date: 2020-06-24
   name: Work on group projects (optional) and/or participate in SICSS Festival
