--- a/_data/2020/duke/schedule.yml
+++ b/_data/2020/duke/schedule.yml
@@ -103,7 +103,7 @@
   name: Work on group projects (optional) and/or participate in SICSS Festival
   events:
     - name: "1:00 - 2:00 Small group meetings with Elizabeth Bruch"
-    - name: "4:00 - 5:00 Elizabeth Bruch"
+    - name: "4:00 - 5:00 Elizabeth Bruch: How (and why) Online Dating Experiences Differ Across U.S. Cities"
     - name: "[Festival](https://compsocialscience.github.io/summer-institute/2020/festival): 11-12 Creating open source software as part of an academic career"
     - name: "[Festival](https://compsocialscience.github.io/summer-institute/2020/festival): 12:30-2 Panel discussion on the non-academic job market in computational social science"
     - name: "[Festival](https://compsocialscience.github.io/summer-institute/2020/festival): 2-3 What Can the SICSS Community Do to Recognize and Eradicate Anti-Black Racism in Computational Social Science?"
