--- a/_data/2020/los_angeles/participants.yml
+++ b/_data/2020/los_angeles/participants.yml
@@ -3,3 +3,72 @@
   image: /assets/images/placeholderPic.png
   bio: "Margarita Boyarskaya is a PhD student at NYU Stern Technology, Operations, and Statistics group working on causal models for algorithmic fairness. She holds a B.Sc. and a M.Sc. in theoretical mathematics from Moscow State University. Previously, Margarita was an intern with the FATE group at Microsoft Research."
 
+- name: Tania Cabello-Hutt
+  image: /assets/images/placeholderPic.png
+  bio: "Tania Cabello-Hutt is a Ph.D. student in Sociology at the University of North Carolina-Chapel Hill. Her main research interest is in gender inequality in the labor market, focusing on the transition to parenthood. For her dissertation, she draws on online data and experimental methods to study how 'family-friendly' benefits and workplaces shape discrimination against mothers and potential mothers. In collaborative projects, she examines gender and racial discrimination in hiring as well as family and employment trajectories over the life course."
+
+- name: Kimberly Clair
+  image: /assets/images/placeholderPic.png
+  bio: "Kimberly Clair is a postdoctoral research fellow at the UCLA Semel Institute for Neuroscience & Human Behavior with training in ethnography (PhD, Gender Studies) and survey/administrative data analysis (MS, Community Health Sciences). Her research uses mixed methods to improve health services for trauma survivors, migrants, incarcerated youth, and veterans. Her current research examines factors associated with changes in health service use among homeless-experienced veterans who transition into supportive housing. She is interested in using computational social science to identify new data sources and innovative methods for evaluating clients’ experiences with health interventions."
+
+- name: Heather Harper
+  image: /assets/images/placeholderPic.png
+  bio: "Heather Harper is a PhD candidate at the University of California, San Diego. She combines computational and comparative historical methods to investigate the conditions that explain policy content development and change. Her dissertation looks at the content and timing of changes in political attention using a case study of federal gendered pay inequity policies in the United States. As a member of the Fiscal Democracy Project at UCSD, she uses local tax policy texts in California to predict voter support for public finance proposals."
+
+- name: Nick Havey
+  image: /assets/images/placeholderPic.png
+  bio: "Nick Havey is a 3rd year PhD student in the Higher Education and Organizational Change program in the UCLA Graduate School of Education and Information Studies. His research interests fall under three areas: the intersection of whiteness and queerness, queer romantic and sexual politics, and student political organizations and political engagement. His ongoing political work considers the key predictors that explain why students change their political orientation over the course of college and how students across the political spectrum engage in campus political discourse and understand themselves as political actors, particularly in reference to students identifying at the other end of the spectrum, and how they develop and implement rhetorical and political repertoires."
+
+- name: Hannah Hertenstein
+  image: /assets/images/placeholderPic.png
+  bio: "Hannah Hertenstein is a doctoral student in the school of sociology at the University of California, Irvine. Her research interests are in education inequality, school choice, and organizational ecology. Before coming to UC Irvine, she conducted research projects that involved geospatial analysis of school closures in Arizona. Hannah received her BA in sociology at the University of Arizona in 2019."
+
+- name: Cybele Kappos
+  image: /assets/images/placeholderPic.png
+  bio: "Kelsey E. Gonzalez is a PhD Candidate in the School of Sociology at the University of Arizona. Her research focuses on computational methods, traditional statistical methods, and social network analysis in connection to thematic interests in the social determinants of physical and mental health and illness, racial and panethnic identities, and discrimination. A few of her current projects include (1) developing a method to visualize multinomial logistic regression coefficients using agglomerative hierarchal clustering and heatmaps, (2) a study of meso-level behavioral contagion and geographic social interconnectedness, (3) A computationally driven analysis of the online cultural logics of bodily transformation, and (4) investigating the moderating role of social network composition on the social support & health relationship. Outside of her research, she is a UArizona Data Science Ambassador, a Carpentries instructor and lesson maintainer, and an avid R user. "
+  website: "https://kelseygonzalez.github.io/"
+
+- name: Benji Kaveladze
+  image: /assets/images/placeholderPic.png
+  bio: "Benji Kaveladze is a PhD student in Psychological Science at UC Irvine. He studies online mental health support communities, aiming to learn how to improve user experiences on these spaces."
+
+- name: Hye Min Kim
+  image: /assets/images/placeholderPic.png
+  bio: "Hye Min Kim is a doctoral candidate at the USC Annenberg School for Communication. She earned her B.A. in Mass Communication and M.A. in Communication from Yonsei University in Seoul, South Korea. During her undergraduate years, she spent a year studying abroad at UCLA and she also worked as a news assistant intern at the CNN Seoul office for a semester. Her research interest revolves around the intersection of health, psychology, media, and communication, embracing diverse methodologies including experiment, survey, and computational methods. Her recent work explores psychological aspects of information seeking and processing as well as public discourse on social media especially about contentious health and other social issues."
+
+- name: Delaney Knorr
+  image: /assets/images/placeholderPic.png
+  bio: "Delaney Knorr is a PhD student in the Department of Anthropology at UCLA broadly interested in women’s health across the life course.  Her research focuses on the evolutionary processes that undergird modern social relationships surrounding motherhood, within which she is particularly interested in the grandmother-mother relationship. Working with a cohort of Latinx women living in Los Angeles, her dissertation pursues how social support and cultural stress influence pregnancy biology as well as mental health during the peri-natal period in effort to respond to health disparities in the US. Ms. Knorr holds a MPhil from the University of Cambridge in Applied Biological Anthropology and is a member of California Center for Population Research."
+
+- name: Hanzhang Liu
+  image: /assets/images/placeholderPic.png
+  bio: "Hanzhang Liu is an assistant professor of Political Studies at Pitzer College. Prior to coming to Pitzer, she was a postdoctoral fellow at the Center for the Study of Contemporary China at University of Pennsylvania. She received her PhD in political science from Columbia University in 2019. Hanzhang studies comparative authoritarian politics with a special focus on China. Specifically, she examines how various authoritarian institutions are deployed to mediate state-society relations. In her dissertation, Hanzhang investigates how the merit-based political recruitment system in contemporary China serves as an institution of upward mobility that co-opts ordinary citizens without further redistribution. In addition, Hanzhang also conducts research on behavior of authoritarian media and women in politics in China."
+
+- name: Michelle Luna
+  image: /assets/images/placeholderPic.png
+  bio: "Michelle Luna is a PhD candidate in the Psychology Department at the University of California, Los Angeles. Her research examines how language affects cognition and vice versa among preschoolers. Her dissertation will consist of experimental studies that aim to increase the long-term retention of words preschoolers learn from shared book reading sessions. She is interested in learning more about machine learning in order to examine the mechanisms behind her behavioral work via computational models."
+
+- name: Stefanie Neumeier
+  image: /assets/images/placeholderPic.png
+  bio: "Stefanie Neumeier is a PhD Candidate in Political Science and International Relations at the University of Southern California. Her broad research interests include international migration, refugee protection, international norms, and political networks. She draws on a range of methods including surveys, social network analysis, and text analysis to explore the emergence and performance of a new public-private refugee protection network. Stefanie holds an MA in International Studies from the University of Oklahoma."
+
+- name: Jieun Park
+  image: /assets/images/placeholderPic.png
+  bio: "Jieun is a Ph.D. student in political science at UCLA. Prior to UCLA, she was a profession researcher at Korea National Diplomatic Academy and Association of World Election Bodies. She completed a masters in International Relations at Seoul National University and a Bachelor degree in International Relations at Australian National University. Her research explores populism and anti-immigration sentiment. She is particularly interested in studying xenophobia/anti-immigration sentiment in Asian countries and the attitudes toward racial minorities in Western countries. Her ongoing project examines the causes of the attitudinal changes toward Asian immigrants in the US and Australia by analyzing survey results and text data of news coverage. She has published her work in Romanian Journal of Electoral Studies and presented at various conferences including MPSA, WPSA, and IPSA."
+
+- name: Fariba Siddiq
+  image: /assets/images/placeholderPic.png
+  bio: "Fariba Siddiq is a Ph.D. student in Urban Planning at the University of California, Los Angeles specializing in transportation policy and planning. She is a graduate student researcher at the UCLA Institute of Transportation Studies. Her research interests lie in travel behavior, transportation equity and transportation and land use interaction."
+
+- name: Gilad Wenig
+  image: /assets/images/placeholderPic.png
+  bio: "Gilad is a PhD student in sociology at the University of California, Los Angeles. His research focuses on war and the military in the Middle East and United States."
+  website: "https://www.diegoleal.info"
+
+- name: Valerie Wirtschafter
+  image: /assets/images/placeholderPic.png
+  bio: "Valerie Wirtschafter is a Ph.D. candidate in political science at the University of California, Los Angeles. Her research interests include social media, public opinion, violent crime, post-conflict development, and quantitative methods. Her dissertation focuses on the effects of crowd-sourcing crime data through social media on political attitudes and perceptions of insecurity in Rio de Janeiro, Brazil. In this project, she utilizes both text analysis on hundred of thousands of social media posts and an online experiment."
+
+- name: Alexandra Wollum
+  image: /assets/images/placeholderPic.png
+  bio: "Alexandra Wollum is a PhD student in the Community Health Sciences Department at the University of California, Los Angeles. She studies the intersection of social norms, social structures, and social movements on reproductive health. She received a MPH from the University of Washington in Global Health concentrating on health metrics and evaluation and a Bachelor’s degree from Tufts University in International Relations and Community Health."
