--- a/_data/2020/los_angeles/participants.yml
+++ b/_data/2020/los_angeles/participants.yml
@@ -25,7 +25,7 @@
 
 - name: Cybele Kappos
   image: /assets/images/Cybele_Kappos_UCLA.pdf
-  bio: "There was an error with this bio and it will appear here soon."
+  bio: "Cybele Kappos is a Ph.D. student in Political Science at UCLA. Her research broadly focuses on democracy in the European Union. She is interested in disentangling how national interests and actors interact with the unique, supranational structure of the EU. She hopes to synthesize several different methodologies in her work including text analysis and supervised machine learning to understand the nuances of political discourse."
 
 - name: Benji Kaveladze
   image: /assets/images/Benji_Kaveladze_UCLA.png
